scripts/gateway-api/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
      name: book-info-route
      namespace: book-info
spec:
      parentRefs:
          - name: ext-book-info-gateway
            namespace: book-info
            sectionName: http

      rules:
          - matches:
                - path:
                        type: Exact
                        value: /productpage
                - path:
                        type: PathPrefix
                        value: /static
                - path:
                        type: Exact
                        value: /login
                - path:
                        type: Exact
                        value: /logout
                - path:
                        type: PathPrefix
                        value: /api/v1/products
            backendRefs:
                - name: productpage
                  port: 9080
